--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,4 +1,4 @@
-header,main,footer{
+/* header,main,footer{
     justify-content: center;
     
    
@@ -6,21 +6,26 @@ header,main,footer{
  
 }
 body {
+    max-width: 100%;
+    max-height: 100%;
     margin:140px;
 }
 .bannar_1, .add, .welcome-container{
 
 align-items: center;
 
-}
+} */
 
 .bannar_1{
     align-items: center;
 
     background-image: url('../images/Banner\ Image.png');
 margin: 50px 140px;
-width: 1320px;
-height: 600px;
+
+width: 2000px;
+height: 1000px;
+
+
 
 text-align: center;
 background-position: center;
@@ -134,8 +139,8 @@ align-items: center;
     
 }
 .address{
-     width: 100%;
-     height: 100%;
+     /* width: 100%;
+     height: 100%; */
      background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0) 100%); 
 
     padding: 130px;
@@ -166,5 +171,136 @@ font-family: Inter;
 font-weight: 600;
 line-height: 56px;
 }
+.soon{
+    background-color: #FFF;
+    margin: 140px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* gap: 100px; */
+    padding: 140px;
+}
+.l1{
+  
+color: #FF0000;
+ font-size: 24px;
+ font-family: Inter;
+ font-weight: 500;
+ word-wrap: break-word
+}
+.l2{
+color: #070211;
+ font-size: 48px;
+ font-family: Merriweather;
+ font-weight: 900;
+ text-transform: capitalize;
+ word-wrap: break-word;
+ margin-top:0px;
+}
+.l3{
+color: rgba(7, 2, 17, 0.60);
+ font-size: 20px;
+ font-family: Inter;
+ font-weight: 400;
+ line-height: 32px;
+ word-wrap: break-word
+}
+.left{
+    display: block;
+}
+.right{
+    display: block;
+}
+.r1{
+color: #FF0000;
+ font-size: 48px;
+ font-family: Inter;
+ font-weight: 700;
+ word-wrap: break-word
+}
+.r2{
+color: rgba(7, 2, 17, 0.60);
+ font-size: 20px;
+ font-family: Inter;
+ font-weight: 400;
+ line-height: 32px;
+ word-wrap: break-word
+}
+.r3{
+    width: 140px;
+    height:102px;
+}
+.center{
+    align-items: center;
+  
+        border: 20px solid red;
+  border-radius: 100%;
 
+}
+.enjoy{
+margin: 10px;
+}
+.discount{
+   background-image: url('../images/Rectangle\ 2.png');
+   background-position: bottom;
+   background-repeat: no-repeat;
+   background-size: 100% 18.5%;
+.content{
+    text-align: center;
+    margin-left: 140px;
+    margin-right: 140px;
+    margin-bottom: 200px;
+}
+.what{
+  
+color: #070211;
+ font-size: 24px;
+ font-family: Inter;
+ word-wrap: break-word;
+ margin-bottom: 0px;
+
+}
+.holy{
+color: #070211;
+ font-size: 72px;
+ font-family: Merriweather;
+ /* font-weight: 900; */
+ word-wrap: break-word;
+ margin-top:0px;
+}
+.dolar{
+color: rgba(7, 2, 17, 0.60);
+ font-size: 20px;
+ font-family: Inter;
+ /* font-weight: 500; */
+ line-height: 32px;
+ word-wrap: break-word;
+}
+.image-content{
+    background-image:url('../images/Rectangle\ 1.png');
+    margin-top:70px;
+    background-repeat: no-repeat;
+    background-position:top right;
+  
+
+
+}
+.image-content-1{
+    justify-content: space-between;
+    display: flex;
+    gap: 100px;
+    align-items: center;
+}
+    .image-content-1.image-1{
+    margin-left: 250px;
+    margin-bottom: 100px;
+   
+}
+.image-content-1.image-2{
+
+
+margin:86px 500px 250px 750px;
+
+
+}
 
