--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -5,45 +5,36 @@
     align-items: center;
  
 }
-body {
-    max-width: 100%;
-    max-height: 100%;
-    margin:140px;
-}
+
+
 .bannar_1, .add, .welcome-container{
 
 align-items: center;
 
 } */
-
-.bannar_1{
-    align-items: center;
-
-    background-image: url('../images/Banner\ Image.png');
-margin: 50px 140px;
-
-width: 2000px;
-height: 1000px;
-
-
-
-text-align: center;
-background-position: center;
-font-family:'merriweather';
-color: #FFF;
-border-radius: 16px;
-background-repeat: no-repeat;
+body {
+    /* max-width: 100%;
+    max-height: 100%; */
+    margin:140px;
 }
-
-.happy{
+.bannar{
+    background-image: url('../images/Banner\ Image.png');
+    border-radius: 16px;
+}
+.bannar-contents{
+    text-align:center;
+    color: white;
+}
+.bannar-about{
 font-size: 32px;
 font-style: normal;
 font-weight: 400;
-
+text-align: center;
 padding: 177px 530px 0px 530px;
 margin-bottom:0 px;
+margin-top: 100px;
 }
-.new{
+.bannar-title{
 font-size: 72px;
 font-weight: 900;
 line-height: 95px;
@@ -216,7 +207,7 @@ color: #FF0000;
  font-size: 48px;
  font-family: Inter;
  font-weight: 700;
- word-wrap: break-word
+ 
 }
 .r2{
 color: rgba(7, 2, 17, 0.60);
@@ -224,7 +215,7 @@ color: rgba(7, 2, 17, 0.60);
  font-family: Inter;
  font-weight: 400;
  line-height: 32px;
- word-wrap: break-word
+ 
 }
 .r3{
     width: 140px;
@@ -245,6 +236,8 @@ margin: 10px;
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: 100% 18.5%;
+   margin:140px;
+}
 .content{
     text-align: center;
     margin-left: 140px;
@@ -303,4 +296,31 @@ margin:86px 500px 250px 750px;
 
 
 }
+.products-section{
+    margin: 140px;
+}
+.best{
+color: #FF0000;
+ font-size: 24px;
+ font-family: Inter;
+ font-weight: 500;
+}
+.our{
+color: #070211;
+ font-size: 48px;
+ font-family: Merriweather;
+ font-weight: 900;
+ text-transform: capitalize;
+ /* flex-wrap: wrap; */
+}
+.row-1,.row-2{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap:24px;
 
+}
+.row1-a,.row1-b{
+    border-radius: 16px;
+    margin-bottom:24px;
+}
