--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -1,5 +1,5 @@
 
-body {
+main,header{
     
     margin:140px;
 }
@@ -35,8 +35,8 @@ line-height: 95px;
 margin: 0px 344px 177px 344px;
 }
 .add{
-    /* width: 1600px; */
-/* height: 7335px;  */
+    width: 1600px;
+height: 800px; 
 background-color: white;
 text-align: center;
 margin-left: 400;
@@ -75,23 +75,26 @@ height: 500px;
     background-position: center;
     /* padding: 125px; */
     margin: 140px;
-    width: 1320px;
-height: 600px;
+    width: 1600px;
+height: 800px;
 display: flex;
     align-items: center;
     /* justify-content: space-between; */
 margin-left: 0px;
+padding:120px;
 }
 
 .welcome{
     color: #FFF;
 font-family: Merriweather;
 font-size: 64px;
-font-weight: 900;
-line-height: 88px;
+/* font-weight: 900;
+line-height: 88px; */
 letter-spacing: 7.04px;
 margin: 125px;
+align-items: center;
 margin-bottom: 0px;
+width: 642px;
 }
 .about-welcome{
     color: rgba(255, 255, 255, 0.80);
@@ -118,14 +121,16 @@ border-radius: 5px;
 width: 319.83px;
 height: 464.662px;
 align-items: center;
+display: flex;
 }
 .welcome-body{
    
     
 }
 .address{
-     /* width: 100%;
-     height: 100%; */
+    width: 1320px;
+    height: 482px;
+    flex-shrink: 0;
      background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0) 100%); 
 
     padding: 130px;
@@ -157,13 +162,15 @@ font-weight: 600;
 line-height: 56px;
 }
 .soon{
-    background-color: #FFF;
+    background-color: white;
     margin: 140px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     /* gap: 100px; */
     padding: 140px;
+    width: 1500px;
+height: 800px;
 }
 .l1{
   
@@ -188,13 +195,14 @@ color: rgba(7, 2, 17, 0.60);
  font-family: Inter;
  font-weight: 400;
  line-height: 32px;
- word-wrap: break-word
+ word-wrap: break-word;
 }
 .left{
     display: block;
 }
 .right{
-    display: block;
+    display:block;
+    
 }
 .r1{
 color: #FF0000;
@@ -229,8 +237,10 @@ margin: 10px;
    background-image: url('../images/Rectangle\ 2.png');
    background-position: bottom;
    background-repeat: no-repeat;
-   background-size: 100% 18.5%;
+   background-size: 100% 21%;
    margin:140px;
+   width: 1600px;
+height: 1300px;
 }
 .content{
     text-align: center;
@@ -292,6 +302,8 @@ margin:86px 500px 250px 750px;
 }
 .products-section{
     margin: 140px;
+    width: 1600px;
+height: 1100px;
 }
 .best{
 color: #FF0000;
@@ -311,7 +323,7 @@ color: #070211;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap:24px;
+    /* gap:24px; */
 
 }
 .row1-a,.row1-b{
@@ -324,6 +336,10 @@ color: #070211;
     background-color: rgba(255, 0, 0, 0.05);
     border-radius: 16px;
     margin: 140px;
+    margin-bottom:0px ;
+    width: 1600px;
+height: 800px;
+flex-shrink: 0;
 }
 .mail{
     /* width: 150px; */
@@ -382,3 +398,66 @@ border:none;
 margin-left:0%;
 
 }
+footer{
+    background-color: #070211;
+    width: 1600px;
+height: 609px;
+padding: 140px;
+
+}
+.footer-address{
+    display: flex;
+    justify-content: space-between;
+    color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+/* line-height: 40px; */
+/* margin-top:140px; */
+}
+.street{
+    margin-bottom: 50px;
+    width:300px;
+    height: 50px;
+}
+.contact{
+    margin-bottom: 50px;
+}
+.mobile{
+    display: flex;
+    align-items: center;
+}
+.website{
+    text-decoration: none;
+    
+}
+.hr{
+    background-color:rgba(255, 255, 255, 0.15);;
+    height:1px;
+
+    
+
+}
+.social-media{
+    align-items: center;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    /* width: 65px;
+    height: 64px;
+    display: inline; */
+}
+.rights{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    margin-top: 50px;
+}
+.Unsubscribe{
+    border: none;
+    background-color:black;
+    color: white;
+    margin-top: 50px;
+}
+
